--- a/summary-date.html
+++ b/summary-date.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,35 +7,30 @@
 <style>
 body {
   font-family: Arial, sans-serif;
-  padding: 0;
   margin: 0;
   background: #f2f6ff;
 }
 
-/* ===== STICKY HEADER ===== */
+/* HEADER */
 .header-bar {
   position: sticky;
   top: 0;
-  z-index: 1000;
   background: #003f88;
-  color: white;
+  color: #fff;
+  padding: 12px;
   display: flex;
   align-items: center;
   gap: 10px;
-  padding: 12px;
+  z-index: 1000;
 }
-
 .header-bar button {
-  background: white;
+  background: #fff;
   color: #003f88;
   border: none;
   border-radius: 6px;
   padding: 8px 12px;
-  font-size: 16px;
   cursor: pointer;
 }
-.header-bar button:hover { opacity: 0.9; }
-
 .header-title {
   flex: 1;
   text-align: center;
@@ -44,44 +38,22 @@ body {
   font-weight: 700;
 }
 
-/* ===== PAGE ===== */
+/* PAGE */
 .page { padding: 20px; }
-
-h2 {
-  color: #003f88;
-  text-align: center;
-  font-size: 34px;
-  margin-bottom: 10px;
-}
-
 .card {
-  background: white;
+  background: #fff;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-  margin-bottom: 20px;
+  box-shadow: 0 2px 6px rgba(0,0,0,.15);
 }
-
-/* CONTROLS */
 .controls {
   display: flex;
   gap: 10px;
-  margin-bottom: 10px;
   flex-wrap: wrap;
-  align-items: center;
+  margin-bottom: 10px;
 }
-.controls input[type="date"] { padding: 6px; }
-.controls input[type="text"] {
+.controls input, .controls button {
   padding: 6px;
-  width: 220px;
-}
-.controls button {
-  padding: 6px 12px;
-  background: #003f88;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
 }
 
 /* TABLE */
@@ -96,24 +68,13 @@ th, td {
 }
 th {
   background: #003f88;
-  color: white;
-}
-th:nth-child(5),
-td:nth-child(5) {
-  width: 110px;
-  white-space: nowrap;
-  text-align: center;
-}
-
-@media (max-width: 600px) {
-  table { font-size: 12px; }
+  color: #fff;
 }
 </style>
 </head>
 
 <body>
 
-<!-- ===== HEADER ===== -->
 <div class="header-bar">
   <button onclick="goHome()">🏠</button>
   <button onclick="goBack()">🔁</button>
@@ -121,118 +82,122 @@ td:nth-child(5) {
 </div>
 
 <div class="page">
+  <div class="card">
+    <div class="controls">
+      <input type="date" id="dateInput">
+      <button onclick="loadSummary()">Load</button>
+      <input id="search" placeholder="Search…">
+      <button onclick="exportExcel()">Export Excel</button>
+      <button onclick="window.print()">Export PDF</button>
+    </div>
 
-<h2>Summary by Date</h2>
-
-<div class="card">
-  <div class="controls">
-    <input type="date" id="dateInput">
-    <button onclick="loadSummary()">Load</button>
-    <input id="search" placeholder="Search…">
-    <button onclick="exportExcel()">Export Excel</button>
-    <button onclick="window.print()">Export PDF</button>
+    <table id="summaryTable">
+      <thead>
+        <tr>
+          <th>BAT</th>
+          <th>EQP</th>
+          <th>TR NO</th>
+          <th>MONTH</th>
+          <th>DATE</th>
+          <th>DETAILS OF JOB</th>
+          <th>JOB TYPE</th>
+          <th>JOB CATEGORY</th>
+          <th>CARRIED OUT BY</th>
+          <th>LINK</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
   </div>
-
-  <table id="summaryTable">
-    <thead>
-      <tr>
-        <th>BAT</th>
-        <th>EQP</th>
-        <th>TR NO</th>
-        <th>MONTH</th>
-        <th>DATE</th>
-        <th>DETAILS OF JOB</th>
-        <th>JOB TYPE</th>
-        <th>JOB CATEGORY</th>
-        <th>CARRIED OUT BY</th>
-        <th>LINK</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
-
 </div>
 
 <script>
-/* ===== NAV ===== */
 function goHome(){ location.href="https://08electricaldata.github.io/"; }
 function goBack(){ history.back(); }
 
-/* ===== DATE NORMALIZER (FIXED) ===== */
-function toISODate(v){
-  if(!v) return "";
+/* ================= DATE NORMALIZATION ================= */
+function normalizeDate(v) {
+  if (!v) return "";
 
-  if(typeof v==="string" && v.startsWith("Date(")){
-    const p=v.match(/\d+/g);
-    return new Date(p[0],p[1],p[2]).toISOString().slice(0,10);
+  // Google Date(yyyy,mm,dd)
+  if (typeof v === "string" && v.startsWith("Date(")) {
+    const p = v.match(/\d+/g);
+    const d = new Date(p[0], p[1], p[2]);
+    return d.toISOString().slice(0,10);
   }
 
-  if(/^\d{2}\/\d{2}\/\d{4}$/.test(v)){
-    const[d,m,y]=v.split("/");
+  // DD/MM/YYYY
+  if (/^\d{2}\/\d{2}\/\d{4}$/.test(v)) {
+    const [d,m,y] = v.split("/");
     return `${y}-${m}-${d}`;
   }
 
-  if(/^\d{2}-\d{2}-\d{4}$/.test(v)){
-    const[d,m,y]=v.split("-");
+  // DD-MM-YYYY
+  if (/^\d{2}-\d{2}-\d{4}$/.test(v)) {
+    const [d,m,y] = v.split("-");
     return `${y}-${m}-${d}`;
   }
 
-  if(!isNaN(Date.parse(v))){
-    return new Date(v).toISOString().slice(0,10);
+  // ISO already
+  if (/^\d{4}-\d{2}-\d{2}/.test(v)) {
+    return v.slice(0,10);
   }
 
   return "";
 }
 
-function formatDate(v){
-  const iso=toISODate(v);
+function displayDate(iso){
   if(!iso) return "";
-  const[y,m,d]=iso.split("-");
+  const [y,m,d]=iso.split("-");
   return `${d}-${m}-${y}`;
 }
 
-/* ===== LOAD SUMMARY ===== */
-async function loadSummary(){
-  const selDate=document.getElementById("dateInput").value;
-  if(!selDate){ alert("Please select a date"); return; }
+/* ================= LOAD SUMMARY ================= */
+async function loadSummary() {
+  const selDate = document.getElementById("dateInput").value;
+  if (!selDate) {
+    alert("Please select a date");
+    return;
+  }
 
-  const url=
-    "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq"+
+  const url =
+    "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq" +
     "?gid=751880096&tqx=out:json";
 
-  const r=await fetch(url);
-  const t=await r.text();
-  const j=JSON.parse(t.substring(47,t.length-2));
+  const r = await fetch(url);
+  const t = await r.text();
+  const j = JSON.parse(t.substring(47, t.length - 2));
 
-  const tbody=document.querySelector("#summaryTable tbody");
-  tbody.innerHTML="";
-  let found=false;
+  const tbody = document.querySelector("#summaryTable tbody");
+  tbody.innerHTML = "";
+  let found = false;
 
-  j.table.rows.forEach(r=>{
-    const c=r.c||[];
-    const rowDate=toISODate(c[4]?.v);
-    if(rowDate!==selDate) return;
+  j.table.rows.forEach(r => {
+    const c = r.c || [];
+    const rowISO = normalizeDate(c[4]?.v);
 
-    found=true;
-    const tr=document.createElement("tr");
-    tr.innerHTML=`
-      <td>${c[2]?.v||""}</td>
-      <td>${c[3]?.v||""}</td>
-      <td>${c[0]?.v||""}</td>
-      <td>${c[1]?.v||""}</td>
-      <td>${formatDate(c[4]?.v)}</td>
-      <td>${c[5]?.v||""}</td>
-      <td>${c[6]?.v||""}</td>
-      <td>${c[7]?.v||""}</td>
-      <td>${c[9]?.v||""}</td>
-      <td>${c[10]?.v?`<a href="${c[10].v}" target="_blank">Open</a>`:""}</td>
+    if (rowISO !== selDate) return;
+
+    found = true;
+
+    const tr = document.createElement("tr");
+    tr.innerHTML = `
+      <td>${c[2]?.v || ""}</td>
+      <td>${c[3]?.v || ""}</td>
+      <td>${c[0]?.v || ""}</td>
+      <td>${c[1]?.v || ""}</td>
+      <td>${displayDate(rowISO)}</td>
+      <td>${c[5]?.v || ""}</td>
+      <td>${c[6]?.v || ""}</td>
+      <td>${c[7]?.v || ""}</td>
+      <td>${c[9]?.v || ""}</td>
+      <td>${c[10]?.v ? `<a href="${c[10].v}" target="_blank">Open</a>` : ""}</td>
     `;
     tbody.appendChild(tr);
   });
 
-  if(!found){
-    tbody.innerHTML=`
+  if (!found) {
+    tbody.innerHTML = `
       <tr>
         <td colspan="10" style="text-align:center;font-weight:600">
           No records found for selected date
@@ -240,21 +205,20 @@ async function loadSummary(){
       </tr>`;
   }
 
-  document.getElementById("search").onkeyup=function(){
+  document.getElementById("search").onkeyup = function(){
     const q=this.value.toLowerCase();
     document.querySelectorAll("#summaryTable tbody tr")
-      .forEach(tr=>tr.style.display=
-        tr.innerText.toLowerCase().includes(q)?"":"none");
+      .forEach(tr=>{
+        tr.style.display = tr.innerText.toLowerCase().includes(q) ? "" : "none";
+      });
   };
 }
 
-/* ===== EXPORT ===== */
+/* ================= EXPORT ================= */
 function exportExcel(){
   let csv=[];
-  document.querySelectorAll("#summaryTable tr").forEach(row=>{
-    csv.push([...row.children].map(td=>
-      `"${td.innerText.replace(/"/g,'""')}"`
-    ).join(","));
+  document.querySelectorAll("#summaryTable tr").forEach(r=>{
+    csv.push([...r.children].map(td=>`"${td.innerText.replace(/"/g,'""')}"`).join(","));
   });
   const a=document.createElement("a");
   a.href=URL.createObjectURL(new Blob([csv.join("\n")]));
