--- a/history.html
+++ b/history.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -192,7 +191,7 @@ th {
 <script>
 const id = new URLSearchParams(location.search).get("id");
 
-/* ===== HEADER ===== */
+/* ===== NAV ===== */
 function goHome(){ location.href="https://08electricaldata.github.io/"; }
 function goBack(){ history.back(); }
 function goDriveInfo(){
@@ -214,14 +213,14 @@ async function loadDriveInfo(){
   });
 
   if(!c){
-    document.getElementById("driveInfo").innerHTML="Drive not found.";
+    driveInfo.innerHTML="Drive not found.";
     return;
   }
 
   const type=(c[1]||"").toUpperCase();
 
   if(type==="TRANSFORMER"){
-    document.getElementById("driveInfo").innerHTML=`
+    driveInfo.innerHTML=`
       <h3>Transformer No: ${c[2]}</h3>
       <div class="grid">
         <p><span class="label">TR Sl No:</span> ${c[3]}</p>
@@ -237,7 +236,7 @@ async function loadDriveInfo(){
   }
 
   if(type==="BREAKER"){
-    document.getElementById("driveInfo").innerHTML=`
+    driveInfo.innerHTML=`
       <h3>Breaker – ${c[2]}</h3>
       <div class="grid">
         <p><span class="label">Compartment No:</span> ${c[3]}</p>
@@ -251,25 +250,19 @@ async function loadDriveInfo(){
     return;
   }
 
-  document.getElementById("driveInfo").innerHTML=`
+  driveInfo.innerHTML=`
     <h3>${c[1]} – ${c[2]}</h3>
     <p><span class="label">Pump Type:</span> ${c[4]}</p>
     <div class="grid">
-      <div>
-        <p><span class="label">Rating:</span> ${c[5]} KW</p>
-        <p><span class="label">FLC:</span> ${c[10]} A</p>
-      </div>
-      <div>
-        <p><span class="label">SFU:</span> ${c[14]}</p>
-        <p><span class="label">Fuse:</span> ${c[15]}</p>
-        <p><span class="label">Contactor:</span> ${c[16]}</p>
-        <p><span class="label">Relay:</span> ${c[17]}</p>
-      </div>
-      <div>
-        <p><span class="label">CT (M):</span> ${c[18]}</p>
-        <p><span class="label">CT (P):</span> ${c[19]}</p>
-        <p><span class="label">Aux Contactor:</span> ${c[20]}</p>
-      </div>
+      <p><span class="label">Rating:</span> ${c[5]} KW</p>
+      <p><span class="label">FLC:</span> ${c[10]} A</p>
+      <p><span class="label">SFU:</span> ${c[14]}</p>
+      <p><span class="label">Fuse:</span> ${c[15]}</p>
+      <p><span class="label">Contactor:</span> ${c[16]}</p>
+      <p><span class="label">Relay:</span> ${c[17]}</p>
+      <p><span class="label">CT (M):</span> ${c[18]}</p>
+      <p><span class="label">CT (P):</span> ${c[19]}</p>
+      <p><span class="label">Aux Contactor:</span> ${c[20]}</p>
     </div>`;
 }
 
@@ -287,7 +280,23 @@ function formatDate(v){
   return `${String(d.getDate()).padStart(2,"0")}-${String(d.getMonth()+1).padStart(2,"0")}-${d.getFullYear()}`;
 }
 
-/* ===== HISTORY (YEAR-WISE JSON COMBINE) ===== */
+/* ===== JOB BOOK JSON ===== */
+const JOBBOOK_JSON =
+  "https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/jobbook.json";
+
+let jobBookMap = {};
+
+async function loadJobBook(){
+  const r = await fetch(JOBBOOK_JSON);
+  const j = await r.json();
+  j.rows.forEach(r=>{
+    if(r[0] && r[1]){
+      jobBookMap[String(r[0]).trim()] = r[1];
+    }
+  });
+}
+
+/* ===== HISTORY ===== */
 const HISTORY_YEARS=[2026,2025,2024,2023,2022,2021,2020,2019];
 const HISTORY_BASE="https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/history/";
 
@@ -329,6 +338,11 @@ function renderHistory(rows){
       tbody.appendChild(yr);
     }
 
+    const link =
+      jobBookMap[r[4]]
+        ? jobBookMap[r[4]]
+        : r[10];
+
     const tr=document.createElement("tr");
     tr.innerHTML=`
       <td>${r[0]||""}</td>
@@ -338,7 +352,7 @@ function renderHistory(rows){
       <td>${r[6]||""}</td>
       <td>${r[7]||""}</td>
       <td>${r[9]||""}</td>
-      <td>${r[10]?`<a href="${r[10]}" target="_blank">Open</a>`:""}</td>`;
+      <td>${link?`<a href="${link}" target="_blank">Open</a>`:""}</td>`;
     tbody.appendChild(tr);
   });
 
@@ -348,8 +362,11 @@ function renderHistory(rows){
 }
 
 /* ===== INIT ===== */
-loadDriveInfo();
-loadHistory();
+(async function(){
+  await loadJobBook();
+  loadDriveInfo();
+  loadHistory();
+})();
 </script>
 
 </body>
