--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
 <div class="header-bar">
   <button class="icon-btn" onclick="goHome()">🏠</button>
   <button class="icon-btn" onclick="goBack()">🔁</button>
+  <button class="icon-btn" onclick="addJob()">➕</button>
   <div class="header-title">
     <h2>Equipment Information</h2>
     <small>Designed and maintained by Rakesh Chandra Sethy</small>
@@ -202,7 +203,6 @@ async function showMotor(c,id){
 
     <div class="action-row">
       <button class="action-btn" onclick="openHistory()">📜 History</button>
-      <button class="action-btn" onclick="addJob()">➕ ADD JOB</button>
     </div>
   </div>`;
 }
