--- a/index.html
+++ b/index.html
@@ -21,10 +21,16 @@ body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
 .header-title small { display: block; font-size: 15px; font-weight: 600; }
 
 .icon-btn {
-  background: #003f88; color: #fff;
-  border: none; border-radius: 8px;
-  padding: 10px 12px; font-size: 18px; cursor: pointer;
+  background: #ffffff;        /* WHITE BUTTON */
+  color: #003f88;             /* BLUE ICON */
+  border: 1px solid #003f88;  /* BLUE BORDER */
+  border-radius: 8px;
+  padding: 10px 12px;
+  font-size: 18px;
+  cursor: pointer;
+  font-weight: bold;
 }
+
 
 .container { padding: 20px; }
 
