--- a/history.html
+++ b/history.html
@@ -141,8 +141,8 @@ th {
 <body>
 
 <div class="header-bar">
-  <button onclick="goHome()">🏠</button>
-  <button onclick="goBack()">🔁</button>
+  <button onclick="goHome()">🏠 Home</button>
+  <button onclick="goBack()">⬅ Back</button>
   <button onclick="goDriveInfo()">ℹ️</button>
 
   <div class="header-title">Drive History</div>
