--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@ body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
 <body>
 
 <div class="header-bar">
-  <button class="icon-btn" onclick="goHome()">🏠</button>
-  <button class="icon-btn" onclick="goBack()">🔁</button>
-  <button class="icon-btn" onclick="addJob()">➕</button>
+  <button class="icon-btn" onclick="goHome()">🏠 Home</button>
+  <button class="icon-btn" onclick="goBack()">⬅ Back</button>
+  <button class="icon-btn" onclick="addJob()">➕ ADD JOB</button>
   <div class="header-title">
     <h2>Equipment Information</h2>
     <small>Designed and maintained by Rakesh Chandra Sethy</small>
