--- a/motorlist.html
+++ b/motorlist.html
@@ -121,8 +121,8 @@ tr:hover {
 <body>
 
 <div class="header-bar">
-  <button onclick="goHome()">🏠</button>
-  <button onclick="goBack()">🔁</button>
+  <button onclick="goHome()">🏠 Home</button>
+  <button onclick="goBack()">⬅ Back</button>
   <div class="header-title">MOTOR MASTER LIST</div>
 </div>
 
