--- a/trafolist.html
+++ b/trafolist.html
@@ -132,8 +132,8 @@ tr:hover {
 
 <!-- ===== HEADER ===== -->
 <div class="header-bar">
-  <button onclick="goHome()">🏠</button>
-  <button onclick="goBack()">🔁</button>
+  <button onclick="goHome()">🏠 Home</button>
+  <button onclick="goBack()">⬅ Back</button>
   <div class="header-title">TRANSFORMER MASTER LIST</div>
 </div>
 
