--- a/breakerlist.html
+++ b/breakerlist.html
@@ -110,8 +110,8 @@ tr:hover {
 <body>
 
 <div class="header-bar">
-  <button onclick="goHome()">🏠</button>
-  <button onclick="goBack()">🔁</button>
+  <button onclick="goHome()">🏠 Home</button>
+  <button onclick="goBack()">⬅ Back</button>
   <div class="header-title">BREAKER MASTER LIST</div>
 </div>
 
